XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* Fix: crash on Ubuntu 12.04 (possibly on other platforms too) in case of some
  styles. Issue #388.
* Fix: extra commas in the 'author' field when a new project is created on
  Ubuntu. Issue #387.
* Fix: extra long signatures in a context help do not limit min window width.
  Issue #386.

2013 Jun 18 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 2.0.1
* Replacing the 'file' utilities calls with magic module included in thirdparty
  directory.


2013 Jun 02 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 2.0
* Initial implementation of the debugger.
* Project viewer restores the previous session expanded directories at the
  start automatically.
* More bound scintilla lexers
* Unhandled exceptions hook now saves the trace back and the log window content
  in a file.
* Some autocomplete improvements
* Allow explicit reloading even if a buffer is not modified.
* File outside modification detection now includes a file size.
* Files deleted via IDE UI are removed from the recent files list as well.
* Bug fix: respect multibyte chars when search incrementally
* Bug fix: autocomplition for non-ascii text did not work.
* Main menu and the text editor context menu now have 'open in browser'
  item.
* Main menu and the text editor context menu now have 'downdload and show'
  item.
* Main menu 'tab' now has 'highlight in...' items.
* Bug fix: 'highlight in file system browser' did not work if it was not a
  project file.
* Basic pyflakes support.
* Python .cgi support in outline browser.
* Bash/sh file type recognition added.
* Pylint and other tools support for python .cgi files.
* Bug fix: improper tooltips and text in similarities pylint sections
  if contained html.
* Bug fix: double slashes in full file names when opened via Ctrl+I.
* New feature: access to the project rope settings file via the Project menu.
* Better dialogs for the cases when both the disk version and the buffer